--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="logo"><a href="#">Rocs</a></div>
             <ul class="links">
                 <li><a href="index.html">Incio</a></li>
-                <li><a href="circunferencia.html">Longitud de circunferencia</a></li>
+                <li><a href="circunferencia.html">Area de circunferencia</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -27,7 +27,7 @@
 
         <div class="dropdown_menu ">
             <li><a href="#">Home</a></li>
-                <li><a href="circunferencia.html">Longitud de circunferencia</a></li>
+                <li><a href="circunferencia.html">Area de circunferencia</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#" class="action_btn">Cursos</a></li>
