--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="links">
                 <li><a href="index.html">Incio</a></li>
                 <li><a href="circunferencia.html">Area de circunferencia</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="descuento.html">Descuento de producto</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <a href="#" class="action_btn">Cursos</a>
@@ -28,7 +28,7 @@
         <div class="dropdown_menu ">
             <li><a href="#">Home</a></li>
                 <li><a href="circunferencia.html">Area de circunferencia</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="descuento.html"></a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#" class="action_btn">Cursos</a></li>
         </div>
