--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         <div class="dropdown_menu ">
             <li><a href="#">Home</a></li>
-                <li><a href="circunferencia.html">Area de circunferencia</a></li>
-                <li><a href="descuento.html"></a></li>
+                <li><a href="circunferencia.html" >Area de circunferencia</a></li>
+                <li><a href="descuento.html" >Descuento de producto</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#" class="action_btn">Cursos</a></li>
         </div>
