--- a/descuento.html
+++ b/descuento.html
@@ -15,7 +15,7 @@
             <ul class="links">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="circunferencia.html">Area de Circunferencia</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="#">Descuento de producto</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <a href="#" class="action_btn">Cursos</a>
