--- a/descuento.html
+++ b/descuento.html
@@ -14,9 +14,9 @@
             <div class="logo"><a href="#">Rocs</a></div>
             <ul class="links">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="circunferencia.html">Area de Circunferencia</a></li>
-                <li><a href="#">Descuento de producto</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="">Nosotros</a></li>
+                <li><a href="#">Contáctanos</a></li>
+                <li><a href="">Not available</a></li>
             </ul>
             <a href="#" class="action_btn">Cursos</a>
             <div class="toggle_btn">
@@ -26,9 +26,9 @@
 
         <div class="dropdown_menu ">
             <li><a href="index.html">Inicio</a></li>
-                <li><a href="circunferencia.html">Area  de Circunferencia</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="">Nosotros</a></li>
+                <li><a href="#">Contáctanos</a></li>
+                <li><a href="">Not available</a></li>
                 <li><a href="#" class="action_btn">Cursos</a></li>
         </div>
     </header> 
