--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         <h1>Programas  <br> para resolver problemas<br> matemáticos.</h1>
         <h2>Usalos sin la necesidad de<br> una calculadora.</h2>
         <br>
-        <a href="#seccion-1" class="btn">Ver AHORA</a>
+        <a href="#seccion-1" class="btn" id="botton">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>Ver AHORA</a>
     </div>
 </div>
 </section>
