--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-    
+    <div class="titular">
     <header>
         <div class="navbar">
             <div class="logo"><a href="#">Rocs</a></div>
@@ -52,6 +52,7 @@
     </div>
 </div>
 </section>
+</div>
 
 <section id="seccion-1" class="content sau">
     <h2 class="title">Productos</h2>
