sobre mi --creado--

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="titular">
     <header>
         <div class="navbar">
-            <div class="logo"><a href="#">Rocs</a></div>
+            <div class="logo"><a href="index.html">Rocs</a></div>
             <ul class="links">
                 <li><a href="">Incio</a></li>
-                <li><a href="">Nosotros</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="">Contactanos</a></li>
                 <li><a href="">Not available</a></li>
             </ul>
@@ -30,7 +30,7 @@
         <div class="dropdown_menu ">
             <li><a href="#">Home</a></li>
                 <li><a href="" >Inicio</a></li>
-                <li><a href="" >Nosotros</a></li>
+                <li><a href="nosotros.html" >Nosotros</a></li>
                 <li><a href="">Contáctanos</a></li>
                 <li><a href="#" class="action_btn">Cursos</a></li>
         </div>
