--- a/nosotros.html
+++ b/nosotros.html
@@ -7,6 +7,7 @@
     <title>Sobre Mí</title>
     <link rel="stylesheet" href="nosotros.css">
     <link rel="icon" href="img/descarga (2).ico">
+    <link rel="stylesheet" href="nosotros.js">
 </head>
 <body>
     <header>
@@ -35,7 +36,7 @@
  <section>
     <h3>Sobre Mí</h3>
     <div class="contenedor-sobremi">
-    <img src="img/WhatsApp Image 2023-09-19 at 12.07.23.jpeg" alt="Rodrigo Campos" title="Rodrigo Campos">
+    <img class="imagen" src="img/WhatsApp Image 2023-09-19 at 12.07.23.jpeg" alt="Rodrigo Campos" title="Rodrigo Campos">
     
     <div class="contenedor-parrafoboton">
     <p class="texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis repellat illum architecto, in praesentium dignissimos et voluptates possimus unde veniam corrupti vitae vero consequuntur
@@ -47,6 +48,7 @@
 </div>
  
 </section>
+<script src="nosotros.js"></script>
     
 </body>
 </html>
