--- a/nosotros.html
+++ b/nosotros.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="navbar">
+        <div translate="no" class="navbar">
             <div class="logo"><a href="index.html">Rocs</a></div>
             <ul class="links">
                 <li><a href="index.html">Incio</a></li>
@@ -35,7 +35,7 @@
     </header> 
  <section>
     <h3>Sobre Mí</h3>
-    <div class="contenedor-sobremi">
+    <div translate="no" class="contenedor-sobremi">
     <img class="imagen" src="img/WhatsApp Image 2023-09-19 at 12.07.23.jpeg" alt="Rodrigo Campos" title="Rodrigo Campos">
     
     <div class="contenedor-parrafoboton">
