--- a/nosotros.html
+++ b/nosotros.html
@@ -34,7 +34,7 @@
         </div>
     </header> 
  <section>
-    <h3>Sobre Mí</h3>
+    <h3 translate="no">Sobre Mí</h3>
     <div translate="no" class="contenedor-sobremi">
     <img class="imagen" src="img/WhatsApp Image 2023-09-19 at 12.07.23.jpeg" alt="Rodrigo Campos" title="Rodrigo Campos">
     
